<?xml version="1.0"?>
<package>
  <name>our_arm_description</name>
  <version>1.0.0</version>
  <description>
    This package includes the urdf, and meshes for the kinematic description of the 
    OUR-I Open Unit Robot of Smokie Robotics www.smokierobotics.com	
  </description>
  <maintainer email="info@robotnik.es">Robotnik</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/our_arm_description</url>
  <author>Smokie Robotics</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  
</package>



