<?xml version="1.0"?>
<package>
  <name>our_arm_gazebo</name>
  <version>0.0.0</version>
  <description>The our_arm_gazebo package</description>

  <maintainer email="info@robotnik.es">Robotnik</maintainer>


  <license>BSD</license>


  <author email="info@robotnik.es">Robotnik</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>our_arm_description</build_depend>
  <build_depend>our_arm_control</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>our_arm_description</run_depend>
  <run_depend>our_arm_control</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
