<?xml version="1.0"?>
<package>
  <name>smokie_our_common</name>
  <version>1.0.0</version>
  <description>The smokie_our_common package. It contains the common packages of the Smokie Robotics OUR-I robot arm</description>
  
  <maintainer email="info@robotnik.es">Robotnik</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/smokie_our_common</url>

  <author email="info@robotnik.es">Robotnik</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>our_arm_description</run_depend>

  <export><metapackage/></export>

</package>
